--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -3,17 +3,47 @@
     /*border-top: 10px solid #1098ad;*/
 }
 
+h1::first-letter{
+    font-style: normal;
+    margin-right: 5px;
+}
+
+h2 {
+    position: relative;
+}
+
+h2::after {
+    content: "TOP";
+    background-color: yellow;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    top: -15px;
+    right: -25px;
+}
+
+h3 + p::first-letter {
+    color: red;
+}
+
+p::first-line {
+    /*color: red;*/
+}
+
+/* Page Sections */
 body {
     color: #444;
     font-family: sans-serif;
 
     border-top: 10px solid #1098ad;
-    margin: 0;
-    padding: 0;
+    position: relative;
 }
 
 nav {
     font-size: 18px;
+    text-align: center;
 }
 
 article {
@@ -21,8 +51,9 @@ article {
 }
 
 .container {
-    width: 700px;
+    width: 800px;
     margin: 0 auto;
+    /*position: relative;*/
 }
 
 .main-header{
@@ -37,6 +68,7 @@ article {
 
 .post-header {
     margin-bottom: 40px;
+    /*position: relative;*/
 }
 
 aside{
@@ -46,6 +78,9 @@ aside{
     padding: 50px 0;
     width: 500px;
 }
+
+/* Smaller Elements*/
+
 
 h1, h2, h3{
     color: #1098ad;
@@ -88,6 +123,7 @@ ul, ol {
 li{
     font-size: 20px;
     margin-bottom: 10px;
+    /*display: inline;*/
 }
 
 li:last-child {
@@ -173,6 +209,40 @@ a:active{
 .post-image {
     width: 100%;
     height: auto;
+    margin: 100px;
+}
+
+nav a:link {
+    /*background-color: orangered;*/
+    /*margin: 20px;*/
+    /*padding: 20px;*/
+
+    /*display: block;*/
+    margin-right: 30px;
+    margin-top: 10px;
+    display: inline-block;
+
+    text-align: center;
+}
+
+nav a:link:last-child {
+    margin-right: 0;
+}
+
+button {
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+
+    position: absolute;
+    /*top: 50px;
+    left: 50px;*/
+    bottom: 50px;
+    right: 50px;
+}
+
+.main-header nav a:link{
+    margin-top: 100px;
 }
 
 /* Resolving conflict */
