--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -198,7 +198,7 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   display: inline-block;
 }
 
@@ -244,9 +244,10 @@ h2::before {
   top: -10px;
   right: -25px;
 }
+/*
 
-/* Resolving conflicts */
-/* #copyright {
+!* Resolving conflicts *!
+!* #copyright {
   color: red;
 }
 
@@ -260,14 +261,14 @@ h2::before {
 
 footer p {
   color: green !important;
-} */
+} *!
 
-/* nav a:link,
+!* nav a:link,
 nav p {
   font-size: 18px;
-} */
+} *!
 
-/* Floats */
+!* Floats *!
 .author-img{
   float: left;
   margin-bottom: 20px;
@@ -310,4 +311,60 @@ aside {
 footer {
   background-color: yellow;
   clear: both;
+}*/
+
+/* FLEX BOX */
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  gap: 75px;
+  margin-bottom: 60px;
+}
+
+article {
+  flex: 1;
+  margin-bottom: 0;
+}
+
+aside {
+  flex: 0 0 300px;
 }
