--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -353,6 +353,8 @@ footer {
   font-style: italic;
 }
 
+/* FLEXBOX LAYOUT */
+/*
 .row {
   display: flex;
   align-items: flex-start;
@@ -367,4 +369,32 @@ article {
 
 aside {
   flex: 0 0 300px;
+}
+*/
+
+/* CSS GRID LAYOUT */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  /* grid-column: 1 / span 2; */
+  grid-column: 1 / -1;
+}
+
+article {
+
+}
+
+aside {
+
+}
+
+footer {
+  background-color: #1098ad;
+  grid-column: 1 / -1;
 }
