--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -108,6 +108,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -145,6 +149,10 @@ img {
 }
 
 /* CHAIRS */
+
+.chair {
+  box-shadow: 20px 20px 20px 10px rgba(0, 0, 0, 0.8);
+}
 .chair-box {
   padding: 24px;
 }
@@ -171,6 +179,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
